updates to appconfig

--- a/sdk/appconfiguration/azure-data-appconfiguration-v2/src/main/resources/META-INF/azure-v2-data-appconfiguration_apiview_properties.json
+++ b/sdk/appconfiguration/azure-data-appconfiguration-v2/src/main/resources/META-INF/azure-v2-data-appconfiguration_apiview_properties.json
@@ -2,35 +2,6 @@
   "flavor": "azurev2", 
   "CrossLanguageDefinitionId": {
     "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient": "AzureAppConfiguration",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkKeyValue": "AzureAppConfiguration.checkKeyValue",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkKeyValueWithResponse": "AzureAppConfiguration.checkKeyValue",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkKeyValues": "AzureAppConfiguration.checkKeyValues",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkKeyValuesWithResponse": "AzureAppConfiguration.checkKeyValues",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkKeys": "AzureAppConfiguration.checkKeys",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkKeysWithResponse": "AzureAppConfiguration.checkKeys",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkLabels": "AzureAppConfiguration.checkLabels",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkLabelsWithResponse": "AzureAppConfiguration.checkLabels",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkRevisions": "AzureAppConfiguration.checkRevisions",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkRevisionsWithResponse": "AzureAppConfiguration.checkRevisions",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkSnapshot": "AzureAppConfiguration.checkSnapshot",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkSnapshotWithResponse": "AzureAppConfiguration.checkSnapshot",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkSnapshots": "AzureAppConfiguration.checkSnapshots",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.checkSnapshotsWithResponse": "AzureAppConfiguration.checkSnapshots",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.deleteKeyValue": "AzureAppConfiguration.deleteKeyValue",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.deleteKeyValueWithResponse": "AzureAppConfiguration.deleteKeyValue",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.deleteLock": "AzureAppConfiguration.deleteLock",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.deleteLockWithResponse": "AzureAppConfiguration.deleteLock",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.getKeyValue": "AzureAppConfiguration.getKeyValue",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.getKeyValueWithResponse": "AzureAppConfiguration.getKeyValue",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.getKeyValues": "AzureAppConfiguration.getKeyValues",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.getKeys": "AzureAppConfiguration.getKeys",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.getLabels": "AzureAppConfiguration.getLabels",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.getRevisions": "AzureAppConfiguration.getRevisions",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.getSnapshot": "AzureAppConfiguration.getSnapshot",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.getSnapshotWithResponse": "AzureAppConfiguration.getSnapshot",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.getSnapshots": "AzureAppConfiguration.getSnapshots",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.putLock": "AzureAppConfiguration.putLock",
-    "com.azure.v2.data.appconfiguration.AzureAppConfigurationClient.putLockWithResponse": "AzureAppConfiguration.putLock",
     "com.azure.v2.data.appconfiguration.AzureAppConfigurationClientBuilder": "AzureAppConfiguration",
     "com.azure.v2.data.appconfiguration.implementation.models.KeyListResult": "AzureAppConfiguration.KeyListResult",
     "com.azure.v2.data.appconfiguration.implementation.models.KeyValueListResult": "AzureAppConfiguration.KeyValueListResult",
@@ -46,6 +17,8 @@
     "com.azure.v2.data.appconfiguration.models.LabelFields": "AzureAppConfiguration.LabelFields",
     "com.azure.v2.data.appconfiguration.models.Snapshot": "AzureAppConfiguration.Snapshot",
     "com.azure.v2.data.appconfiguration.models.SnapshotFields": "AzureAppConfiguration.SnapshotFields",
-    "com.azure.v2.data.appconfiguration.models.SnapshotStatus": "AzureAppConfiguration.SnapshotStatus"
+    "com.azure.v2.data.appconfiguration.models.SnapshotStatus": "AzureAppConfiguration.SnapshotStatus",
+    "com.azure.v2.data.appconfiguration.models.SnapshotUpdateParameters": "AzureAppConfiguration.SnapshotUpdateParameters",
+    "com.azure.v2.data.appconfiguration.models.UpdateSnapshotRequestContentType": "AzureAppConfiguration.updateSnapshot.RequestContentType.anonymous"
   }
 }
