remove environment for jobs that were deployments

--- a/eng/pipelines/templates/stages/archetype-java-release-batch.yml
+++ b/eng/pipelines/templates/stages/archetype-java-release-batch.yml
@@ -294,8 +294,7 @@ stages:
         - job: UpdatePackageVersion
           displayName: "Update Package Version"
           condition: and(succeeded(), ne(variables['Skip.UpdatePackageVersion'], 'true'))
-          environment: ${{ parameters.Environment }}
-          dependsOn: PublishPackage
+          dependsOn: PublishDevFeedPackage
           pool:
             name: azsdk-pool-mms-win-2022-general
             image: azsdk-pool-mms-win-2022-1espt
@@ -343,8 +342,7 @@ stages:
         - job: PublishDocsMs
           displayName: Docs.MS Release
           condition: and(succeeded(), ne(variables['Skip.PublishDocs'], 'true'))
-          environment: ${{ parameters.Environment }}
-          dependsOn: PublishPackage
+          dependsOn: PublishDevFeedPackage
 
           pool:
             name: azsdk-pool-mms-ubuntu-2004-general
@@ -385,8 +383,7 @@ stages:
         - job: PublishDocs
           displayName: Publish Docs to GitHubIO Blob Storage
           condition: and(succeeded(), ne(variables['Skip.PublishDocs'], 'true'))
-          environment: ${{ parameters.Environment }}
-          dependsOn: PublishPackage
+          dependsOn: PublishDevFeedPackage
           pool:
             name: azsdk-pool-mms-win-2022-general
             image: azsdk-pool-mms-win-2022-1espt
