--- a/sdk/identity/azure-identity-v2/pom.xml
+++ b/sdk/identity/azure-identity-v2/pom.xml
@@ -14,7 +14,7 @@
   <packaging>jar</packaging>
   <version>1.0.0-beta.1</version> <!-- {x-version-update;com.azure:azure-identity-v2;current} -->
 
-  <name>Microsoft Azure Java Core V2 Library</name>
+  <name>Microsoft Azure Identity V2 Library</name>
   <description>This package contains core types for Azure Java V2 clients.</description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
 
