--- a/sdk/digitaltwins/azure-digitaltwins-core/pom.xml
+++ b/sdk/digitaltwins/azure-digitaltwins-core/pom.xml
@@ -13,7 +13,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-digitaltwins-core</artifactId>
-  <version>1.5.0-beta.1</version> <!-- {x-version-update;com.azure:azure-digitaltwins-core;current} -->
+  <version>1.4.1</version> <!-- {x-version-update;com.azure:azure-digitaltwins-core;current} -->
 
   <name>Microsoft Azure client library for Digital Twins</name>
   <description>This package contains the Microsoft Azure DigitalTwins client library.</description>
@@ -46,11 +46,6 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>com.azure</groupId>
-      <artifactId>azure-json</artifactId>
-      <version>1.4.0</version> <!-- {x-version-update;com.azure:azure-json;dependency} -->
-    </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
