--- a/sdk/boms/ci.yml
+++ b/sdk/boms/ci.yml
@@ -28,10 +28,10 @@ extends:
         safeName: azuresdkbom
         releaseInBatch: ${{ parameters.release_azuresdkbom }}
       - name: spring-cloud-azure-dependencies
-        groupID: com.azure.spring
+        groupId: com.azure.spring
         safeName: springcloudazuredependencies
         releaseInBatch: ${{ parameters.release_springcloudazuredependencies }}
       - name: azure-sdk-template-bom
-        groupID: com.azure
+        groupId: com.azure
         safeName: azuresdktemplatebom
         releaseInBatch: ${{ parameters.release_azuresdktemplatebom }}
