Nothing should be defaulted to true in release checkboxes for POM only releases

--- a/sdk/boms/ci.yml
+++ b/sdk/boms/ci.yml
@@ -8,7 +8,7 @@ parameters:
   - name: release_azuresdkbom
     displayName: 'azure-sdk-bom'
     type: boolean
-    default: true
+    default: false
   - name: release_springcloudazuredependencies
     displayName: 'spring-cloud-azure-dependencies'
     type: boolean
