set the TestPipeline for patch release so template can be released for testing

--- a/eng/pipelines/patch-release.yml
+++ b/eng/pipelines/patch-release.yml
@@ -3,6 +3,9 @@ pr: none
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client-patch.yml
   parameters:
+    # JRS - This will be removed as it is only used for testing. When set, it'll
+    # set the template pipeline test versions.
+    TestPipeline: true
     artifacts:
     - name: azure-sdk-template
       groupId: com.azure
