--- a/sdk/eventhubs/azure-messaging-eventhubs-checkpointstore-blob/pom.xml
+++ b/sdk/eventhubs/azure-messaging-eventhubs-checkpointstore-blob/pom.xml
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-messaging-eventhubs</artifactId>
-      <version>5.20.1</version> <!-- {x-version-update;com.azure:azure-messaging-eventhubs;current} -->
+      <version>5.20.1</version> <!-- {x-version-update;com.azure:azure-messaging-eventhubs;dependency} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
