--- a/sdk/databasewatcher/azure-resourcemanager-databasewatcher/pom.xml
+++ b/sdk/databasewatcher/azure-resourcemanager-databasewatcher/pom.xml
@@ -70,5 +70,11 @@
       <version>1.15.3</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.azure.resourcemanager</groupId>
+      <artifactId>azure-resourcemanager-resources</artifactId>
+      <version>2.48.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-resources;dependency} -->
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
